[tool.poetry]
name = "policy_design"
version = "0.1.0"
description = ""
authors = ["yoshiki301 <yoshiki301@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
obp = "^0.5.1"
ipykernel = "^6.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
